src/objects/CareMeridian_Contract_Rate_and_Level__c.object
<CustomObject>
    <fields>
        <fullName>Bed_Holds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bed Holds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CareMeridian_Contract__c</fullName>
        <label>CareMeridian Contract</label>
        <referenceTo>CareMeridian_Contract__c</referenceTo>
        <relationshipLabel>CareMeridian Contract Rates and Levels</relationshipLabel>
        <relationshipName>CareMeridian_Contract_Rate_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <label>Sort Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CareMeridian Contract Rate and Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CareMeridian_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CareMeridian Contract Rates and Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>